@@ -67,7 +67,7 @@
       $remark        = "> " . str_replace( "\n", "\n> ", $remark );
       $remark        = wordwrap( $remark, 60, "\n> " );
 
-      $smarty = getSmartyObject( $developer );
+      $smarty = getSmartyObject();
       $smarty->assign( 'comment', $rawComment );
       $smarty->assign( 'remark', $remark );
 
@@ -112,7 +112,7 @@
   $htmlComment = str_replace( "\r", "", $htmlComment );
   $htmlComment = str_replace( "\n", "<br/>", $htmlComment );
 
-  $smarty = getSmartyObject( $developer );
+  $smarty = getSmartyObject();
   $smarty->assign( 'version', htmlentities($comment->version, ENT_QUOTES, "UTF-8" ) );
   $smarty->assign( 'locale',  htmlentities($comment->locale,  ENT_QUOTES, "UTF-8" ) );
   $smarty->assign( 'window',  htmlentities($comment->window,  ENT_QUOTES, "UTF-8" ) );
